<?xml version="1.0"?>
<package>
  <name>fx8_ros_driver</name>
  <version>0.0.0</version>
  <description>The fx8-ros-driver package</description>

  <maintainer email="fujii.shohei@gmail.com">Shohei Fujii</maintainer>
  <license>MIT</license>
  <!-- <url type="website">http://wiki.ros.org/fx8-ros-driver</url> -->
  <author email="fujii.shohei@gmail.com">Shohei Fujii</author> 


  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <build_depend>sensor_msgs</build_depend> 
  <run_depend>sensor_msgs</run_depend> 
  <buildtool_depend>catkin</buildtool_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
